# topple

./: .gitignore  .goreleaser.yaml  .mise.toml  BUG_STATUS_REPORT.md  CHANGELOG.md  CLAUDE.md  Makefile  README.md  biscuit.py  cli.md  compilation_analysis.md  go.mod  go.sum  grammar_biscuit.md  grammar_python.md  parser_bugs.md  parser_design.md  pyproject.toml  rebranding.md  runtime.py  test_examples.py  test_raw.psx  test_raw.py
.claude/: settings.json  settings.local.json
.claude/commands/: analyze-coderabbit.md  review.md
.github/workflows/: ci.yml  pypi.yml  release-please.yml  release.yml
cmd/: compile.go  main.go  parse.go  scan.go  watch.go
cmd/topple/: compile.go  inspect.go  main.go  parse.go  scan.go  watch.go
compiler/: ast.go  ast_printer.go  compiler.go  e2e_test.go  errors.go  expression.go  multifile.go  multifile_test.go  parser.go  printer.go  scanner.go  statement.go  token.go
compiler/ast/: annotation_stmt.go  argument.go  assert_stmt.go  assign.go  assign_stmt.go  attribute.go  aug_assign_stmt.go  await.go  binary.go  break_stmt.go  call.go  class.go  comprehensions.go  continue_stmt.go  core.go  decorator.go  dict.go  expr_stmt.go  for.go  for_if.go  fstring.go  function.go  group.go  (+36 more)
docs/: architecture.md  cli.md  debug_enhancements.md  error_handling.md  golden_tests.md  grammar_biscuit.md  grammar_psx.md  index.md  runtime.md  tests.md
examples/: __init__.py  test.bsct
issues/: README.md  codegen-bug-01-multistmt.md  parser-bug-01-operator-precedence.md  parser-bug-02-multiple-starred-expressions.md  parser-bug-04-e2e-compilation-failure.md  parser-bug-05-async-view-support.md  parser-bug-06-relative-import-dots.md  parser-bug-07-target-parsing.md  parser-bug-08-try-clause-ordering.md  parser-bug-09-function-parameters.md
test_composition/: card.psx  card.py  page.psx  page.py
topple/: __init__.py  psx.py
(+414 files in other folders)
