[tool.poetry]
name = "topple"
version = "0.1.0"
description = "Topple - A Python transpiler for PSX (Python Syntax eXtension)"
authors = ["fjvillamarin <ferriverodiaz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.12"
uvicorn = "^0.34.1"
python-multipart = "^0.0.20"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
